fetchMarket add - display markets

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 
 <body>
+    <script type="text/javascript" src="src/index.js"></script>
 
     <h1>Welcome to Beyond the Blend Market</h1>
+    
+    <ul id="market-container", class="market-container">
 
-    <ul id="market-container"></ul>
+    </ul>
     
 
-    <script type="text/javascript" src="src/index.js"></script>
 </body>
 </html>
