adapter change name

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <script type="text/javascript" src="src/components/product.js"></script>
     <script type="text/javascript" src="src/components/market.js"></script>
-    <script type="text/javascript" src="src/components/adapter.js"></script>
+    <script type="text/javascript" src="src/components/marketAdapter.js"></script>
     <script type="text/javascript" src="src/index.js"></script>
 </body>
 </html>
