--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
         <ul id="product-container", class="product-container"></ul>
 
     </div>
+    <div id="review-container", class="review-container"> 
+        
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script type="text/javascript" src="src/components/product.js"></script>
     <script type="text/javascript" src="src/components/productAdapter.js"></script>
+    <script type="text/javascript" src="src/components/form.js"></script>
     <script type="text/javascript" src="src/index.js"></script>
 </body>
 </html>
