--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div id="cart-container"></div>
         <button id="checkout"> Checkout </button>
     </div>
+    <div class="checkout-form" id="checkout-container-form"> To Checkout:</div>
     
     <div id="products-grid" class="products-grid" > 
         <ul id="product-container" class="product-container"></ul>           
