create order fetch

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="cart-container"></div>
         <button id="checkout"> Checkout </button>
     </div>
-    <div class="checkout-form" id="checkout-container-form"> To Checkout:</div>
+    <div class="checkout-form" id="checkout-container-form"></div>
     
     <div id="products-grid" class="products-grid" > 
         <ul id="product-container" class="product-container"></ul>           
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="src/components/product.js"></script>
     <script type="text/javascript" src="src/components/productAdapter.js"></script>
     <script type="text/javascript" src="src/components/form.js"></script>
+    <script type="text/javascript" src="src/components/order.js"></script>
     <script type="text/javascript" src="src/index.js"></script>
 </body>
 </html>
