--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 </head>
 
 <body>
-   
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+          <form class="d-flex" id="search-orders">
+            <input class="form-control me-2" type="search" placeholder="Search By Order #" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
     
 
     <h1>Welcome to Beyond the Blend Market</h1>
