OOH with laura and eri

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <input class="form-control me-2" type="search" placeholder="Search By Order #" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
+          <a class="navbar-brand" >Beyond the Blend Market</a>
         </div>
       </nav>
     
 
-    <h1>Welcome to Beyond the Blend Market</h1>
     <button id="cart-display" class="cart-display">&#128722;</button><br>
     <div id="cart-side-page" class="hidden">
         <div id="cart-container"></div>
