sort products from least expensive to most btn

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
 <!-----------------------------------------products grid------------------------------------>
     <div id="products-grid" class="products-grid" > 
+        <button id="sortBtn"> Sort Products </button>
         <ul id="product-container" class="product-container"></ul>           
     </div>
 <!-----------------------------------------end of products grid----------------------------->
